--- a/WoldProject/MainWindow.xaml
+++ b/WoldProject/MainWindow.xaml
@@ -7,6 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75*"/>
+            <RowDefinition Height="300"/>
+            <RowDefinition Height="30*"/>
+        </Grid.RowDefinitions>
+
+        <Image Source="Resources/logo.png" HorizontalAlignment="Left"/>
+        <TextBlock Text="HEADER" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid Background="#bae3e8" Panel.ZIndex="-2"></Grid>
+        <Grid Grid.Row="2" Background="#445c93"></Grid>
+        <Frame Grid.Row="2" ContentRendered="MainFrame_ContentRendered" NavigationUIVisibility="Hidden" Name="MainFrame"></Frame>
+        <Button Content="Back" Name="BtnBack" Width="175" Height="30" HorizontalAlignment="Right" Margin="5" Click="BtnBack_Click"/>
     </Grid>
 </Window>
