--- a/WoldProject/MainWindow.xaml
+++ b/WoldProject/MainWindow.xaml
@@ -5,18 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WoldProject"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="800" Width="1024" ResizeMode="CanResizeWithGrip">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="75*"/>
-            <RowDefinition Height="300"/>
-            <RowDefinition Height="30*"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="300*"/>
         </Grid.RowDefinitions>
 
-        <Image Source="Resources/logo.png" HorizontalAlignment="Left"/>
+        <Image Source="Resources/logo.png" HorizontalAlignment="Left" Width="100" Height="100"/>
         <TextBlock Text="HEADER" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Grid Background="#bae3e8" Panel.ZIndex="-2"></Grid>
-        <Grid Grid.Row="2" Background="#445c93"></Grid>
         <Frame Grid.Row="1" ContentRendered="MainFrame_ContentRendered" NavigationUIVisibility="Hidden" Name="MainFrame"></Frame>
         <Button Content="Back" Name="BtnBack" Width="175" Height="30" HorizontalAlignment="Right" Margin="5" Click="BtnBack_Click"/>
     </Grid>
